--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "node-cache": "^4.1.1",
     "pg-promise": "^5.9.5",
     "request": "^2.81.0",
-    "angular": "1.6.4",
+    "angular": "^1.6.4",
     "angular-chart.js": "^1.1.1",
-    "angular-resource": "1.6.4",
-    "angular-route": "1.6.4",
+    "angular-resource": "^1.6.4",
+    "angular-route": "^1.6.4",
     "angular-sanitize": "^1.6.9",
     "angular-socket-io": "^0.7.0",
     "angular-utils-pagination": "^0.11.1",
