--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "nlusecuritytoken": "",
     "cacheagents": false,
     "jwtsecret": "th1s1sn0t0nlyths3cr3tbutth3m0st1mp0rtAntp13c30f1nf0rmAt10nf0rth1sAppl1cAt10n",
-    "postgresserver": "postgres://postgres:rasaui@localhost:5432/rasaui"
+    "postgresserver": "postgres://rasaui:rasaui@localhost:5432/rasaui",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "debug": "node --inspect server/server.js"
   },
   "author": "Paul Aschmann",
   "url": "https://github.com/paschmann/rasa-ui",
